--- a/src/com/marcin/todolist/mainwindow.fxml
+++ b/src/com/marcin/todolist/mainwindow.fxml
@@ -42,7 +42,7 @@
                             </ImageView>
                         </graphic>
                     </Button>
-                    <Button>
+                    <Button onAction="#showEditItemDialog">
                         <tooltip>
                             <Tooltip text="Edit selected Task" />
                         </tooltip>
